admin proje eklerken 2 farkli resim ekleme eklendi ana sitede portfolio resim src leri revize edildi db de gereksiz portfolio sutunlari silindi

--- a/Core_Proje/Views/Shared/Components/SlideList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/SlideList/Default.cshtml
@@ -9,7 +9,7 @@
                 @foreach (var item in Model)
                 {
                     <div class="item">
-                        <img src="@item.ImageUrl" alt=""  width="300" height="200">
+                        <img src="~/projectimage/@item.ImageUrl" alt=""  width="300" height="200">
                     </div>
                 }
 
