--- a/Core_Proje/Views/Portfolio/AddPortfolio.cshtml
+++ b/Core_Proje/Views/Portfolio/AddPortfolio.cshtml
@@ -1,4 +1,4 @@
-﻿@model EntityLayer.Concrete.Portfolio
+﻿@model Core_Proje.Models.PortfolioViewModel
 @{
     ViewData["Title"] = "AddPortfolio";
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
@@ -22,7 +22,7 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Proje Ekleme</h4>
-                <form method="post" class="forms-sample">
+                <form method="post" class="forms-sample" enctype="multipart/form-data">
                     <div class="form-group">
                         <label>Proje</label>
                         <input type="text" name="Name" class="form-control" placeholder="Proje Adı Giriniz" />
@@ -39,15 +39,13 @@
                             <option value="/argon-dashboard-master/assets/img/theme/react.jpg">React</option>
                         </select>
                     </div>
-                    <div class="form-group">
-                        <label>Küçük Resim</label>
-                        <input type="text" name="ImageUrl" class="form-control" placeholder="Cv sayfasında görünecek resim">
-                        @Html.ValidationMessageFor(x => x.ImageUrl, null, new { @class = "text-danger" })
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">Ana sitedeki tanıtım kartında görünecek resim</label>
+                        <input class="form-control" type="file" id="formFile1" name="Picture">
                     </div>
-                    <div class="form-group">
-                        <label>Büyük Resim</label>
-                        <input type="text" name="ImageUrl2" class="form-control" placeholder="Cv sayfasında tıklanıldığında açılacak resim">
-                        @Html.ValidationMessageFor(x => x.ImageUrl2, null, new { @class = "text-danger" })
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">Ana sitedeki büyük resim</label>
+                        <input class="form-control" type="file" id="formFile2" name="Picture2">
                     </div>
                     <div class="form-group">
                         <label>Proje Adresi</label>
