admin portfolio duzenleme artık veri tabaninda olan platforma gore secili geliyor otomatik olarak

--- a/Core_Proje/Views/Portfolio/EditPortfolio.cshtml
+++ b/Core_Proje/Views/Portfolio/EditPortfolio.cshtml
@@ -34,7 +34,7 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword4">Platform</label>
-                        <select typeof="text" class="form-control" name="Platform" >
+                        <select typeof="text" class="form-control" name="Platform" asp-for="Platform">
 
                             <option value="/argon-dashboard-master/assets/img/theme/c-sharp.svg">C#</option>
                             <option value="/argon-dashboard-master/assets/img/theme/windowsForm.png">Windows Form</option>
