ana sayafada kucuk resim göstermemesi duzeltildi

--- a/Core_Proje/Views/Shared/Components/PortfolioList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/PortfolioList/Default.cshtml
@@ -13,7 +13,7 @@
                 <div class="grid-item">
                     <a href="@item.ProjectUrl">
                         <figure class="portfolio-item">
-                            <img src="~/projectimage/@item.ImageUrl" data-bp="~/projectimage/@item.ImageUrl2" />
+                            <img src="~/projectimage/@item.ImageUrl" data-bp="/projectimage/@item.ImageUrl2" />
                             <figcaption>
                                 <h4 class="h5 mb-0">@item.Name</h4>
                                 <div>@item.ProjectUrl</div>
