secmeli listeler db ye gore secili geliyor. edit service select listesindeki hata giderildi. portfolio ya yeni select eklendi

--- a/Core_Proje/Views/Portfolio/EditPortfolio.cshtml
+++ b/Core_Proje/Views/Portfolio/EditPortfolio.cshtml
@@ -41,6 +41,7 @@
                             <option value="/argon-dashboard-master/assets/img/theme/angular.jpg">Angular</option>
                             <option value="/argon-dashboard-master/assets/img/theme/bootstrap.jpg">Bootstrap</option>
                             <option value="/argon-dashboard-master/assets/img/theme/react.jpg">React</option>
+                            <option value="/argon-dashboard-master/assets/img/theme/Html5.png">Html5</option>
                         </select>
                     </div>
                     <div class="mb-3">
