--- a/Core_Proje/Views/Service/EditService.cshtml
+++ b/Core_Proje/Views/Service/EditService.cshtml
@@ -32,13 +32,13 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword4">Platform</label>
-                        <select typeof="text" class="form-control" name="ImageUrl">
+                        <select typeof="text" class="form-control" name="ImageUrl" asp-for="ImageUrl">
 
                             <option value="/Template/images/services/windows-form.svg">C#</option>
                             <option value="/Template/images/services/veri-tabani.svg">SQL</option>
                             <option value="/Template/images/services/back-end.svg">Back-End</option>
                             <option value="/Template/images/services/web-gelistirme.svg">Web Geliştirme</option>
-                            <option value="/Template/images/services/windows-form.svg">Mobil Uygulama Geliştirme </option>
+                            <option value="/Template/images/services/mobile.svg">Mobil Uygulama Geliştirme </option>
                         </select>
                     </div>
 
