--- a/Core_Proje/Views/Experience/EditExperience.cshtml
+++ b/Core_Proje/Views/Experience/EditExperience.cshtml
@@ -37,7 +37,7 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword4">Platform</label>
-                        <select typeof="text" class="form-control" name="ImageUrl">
+                        <select typeof="text" class="form-control" name="ImageUrl" asp-for="ImageUrl">
                          
                             <option value="/Template/images/services/windows-form.svg">C#</option>
                             <option value="/Template/images/services/veri-tabani.svg">SQL</option>
