--- a/Core_Proje/Views/SocialMedia/EditSocialMedia.cshtml
+++ b/Core_Proje/Views/SocialMedia/EditSocialMedia.cshtml
@@ -5,28 +5,43 @@
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<div class="col-12 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Sosyal Medya Güncelleme</h4>
-            <form class="forms-sample" method="post">
+<!DOCTYPE html>
+<html lang="en">
 
-                @Html.HiddenFor(model => model.SocialMediaId)
-                @Html.HiddenFor(model => model.Icon)
+<head>
+    <style>
+        /* Devre dışı durumdaki input etiketi */
+        input[disabled] {
+            background-color: #191c24 !important; /* Arka plan rengini değiştirme */
+        }
+    </style>
+</head>
 
-                <div class="form-group">
-                    <label for="exampleInputName1">Platform</label>
-                    <input type="text" name="Name" class="form-control" value="@Model.Name" />
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Url</label>
-                    <input type="text" name="Url" class="form-control" value="@Model.Url">
-                </div>
+<body>
 
-                <button type="submit" class="btn btn-warning ">Güncelle</button>
-                <a href="/SocialMedia" class="btn btn-danger">İptal</a>
-            </form>
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Sosyal Medya Güncelleme</h4>
+                <form class="forms-sample" method="post">
+
+                    @Html.HiddenFor(model => model.SocialMediaId)
+                    @Html.HiddenFor(model => model.Icon)
+
+                    <div class="form-group">
+                        <label for="exampleInputName1">Platform</label>
+                        <input type="text" name="Name" class="form-control" value="@Model.Name" disabled />
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail3">Url</label>
+                        <input type="text" name="Url" class="form-control" value="@Model.Url">
+                    </div>
+
+                    <button type="submit" class="btn btn-warning ">Güncelle</button>
+                    <a href="/SocialMedia" class="btn btn-danger">İptal</a>
+                </form>
+            </div>
         </div>
     </div>
-</div>
-
+    </body>
+</html>
