--- a/Core_Proje/Views/Testimonial/Index.cshtml
+++ b/Core_Proje/Views/Testimonial/Index.cshtml
@@ -30,7 +30,7 @@
                                 <tr>
 
                                     <td>
-                                        <img src="@item.ImageUrl" alt="image" />
+                                        <img src="/testimonialimage/@item.ImageUrl" alt="image" style="width:50px; height:50px;"/>
                                     </td>
                                     <td>  <span class="pl-2">@item.ClientName</span></td>
                                     <td> @item.Company </td>
