admin testimonial edit revize edildi

--- a/Core_Proje/Views/Testimonial/EditTestimonial.cshtml
+++ b/Core_Proje/Views/Testimonial/EditTestimonial.cshtml
@@ -7,37 +7,35 @@
 
 
 
-<div class="col-12 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Refarans Detayları</h4>
-            <form class="forms-sample" method="post" enctype="multipart/form-data">
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Refarans Detayları</h4>
+                <form class="forms-sample" method="post" enctype="multipart/form-data">
 
 
-                @Html.HiddenFor(model => model.TestimonialId)
-                <div class="form-group">
-                    <label for="exampleInputName1">Ad Soyad</label>
-                    <input type="text" name="ClientName" class="form-control" value="@Model.ClientName" />
-                </div>
-                <div class="mb-3">
-                    <label for="formFile" class="form-label">Resim</label>
-                    <input class="form-control" type="file" id="formFile" name="Picture">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Şirket</label>
-                    <input type="text" name="Company" class="form-control" value="@Model.Company">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Yorum</label>
-                    <input type="text" name="Comment" class="form-control" value="@Model.Comment">
-                </div>
+                    @Html.HiddenFor(model => model.TestimonialId)
+                    <div class="form-group">
+                        <label for="exampleInputName1">Ad Soyad</label>
+                        <input type="text" name="ClientName" class="form-control" value="@Model.ClientName" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">Resim</label>
+                        <input class="form-control" type="file" id="formFile" name="Picture">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail3">Şirket</label>
+                        <input type="text" name="Company" class="form-control" value="@Model.Company">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail3">Yorum</label>
+                        <textarea name="Comment" class="form-control" >@Model.Comment</textarea>
+                    </div>
 
-                <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
-                <a href="/Testimonial" class="btn btn-danger">Geri</a>
-            </form>
+                    <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
+                    <a href="/Testimonial" class="btn btn-danger">Geri</a>
+                </form>
+            </div>
         </div>
     </div>
-</div>
-
-
 
