--- a/Core_Proje/Views/Testimonial/Index.cshtml
+++ b/Core_Proje/Views/Testimonial/Index.cshtml
@@ -30,7 +30,15 @@
                                 <tr>
 
                                     <td>
-                                        <img src="/testimonialimage/@item.ImageUrl" alt="image" style="width:50px; height:50px;"/>
+                                        @if (item.ImageUrl == null)
+                                        {
+                                            <img src="/testimonialimage/default.jpg" alt="image" style="width:50px; height:50px;" />
+                                        }
+                                        else
+                                        {
+                                            <img src="/testimonialimage/@item.ImageUrl" alt="image" style="width:50px; height:50px;" />
+                                        }
+
                                     </td>
                                     <td>  <span class="pl-2">@item.ClientName</span></td>
                                     <td> @item.Company </td>
