--- a/Core_Proje/Areas/Writer/Views/Shared/Components/Navbar/Default.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Shared/Components/Navbar/Default.cshtml
@@ -1,6 +1,14 @@
 ﻿<li class="nav-item nav-profile dropdown">
     <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-        <img src="~/userimage/@ViewBag.v" alt="profile" />
+        @if (ViewBag.v == null)
+        {
+            <img src="~/userimage/default.png" alt="profile" />
+        }
+        else
+        {
+            <img src="~/userimage/@ViewBag.v" alt="profile" />
+        }
+        <span class="ml-2">@ViewBag.v2</span>
     </a>
     <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
         <a class="dropdown-item" href="/Writer/Profile/Index">
